# dodo

./: .gitignore  CMakeLists.txt  Crc32_8cpp_source.html  Crc32_8h_source.html  DEVELOPER.md  MAINTAINER.md  README.md  address_8cpp.html  address_8cpp__incl.map  address_8cpp__incl.md5  address_8cpp_source.html  address_8hpp.html  address_8hpp__dep__incl.map  address_8hpp__dep__incl.md5  address_8hpp__incl.map  address_8hpp__incl.md5  address_8hpp_source.html  annotated.html  annotated_dup.js  application_8cpp.html  application_8cpp__incl.map  application_8cpp__incl.md5  application_8cpp_source.html  application_8hpp.html  application_8hpp__dep__incl.map  application_8hpp__dep__incl.md5  application_8hpp__incl.map  application_8hpp__incl.md5  application_8hpp_source.html  basesocket_8cpp.html  basesocket_8cpp__incl.map  basesocket_8cpp__incl.md5  basesocket_8cpp_source.html  basesocket_8hpp.html  basesocket_8hpp__dep__incl.map  basesocket_8hpp__dep__incl.md5  basesocket_8hpp__incl.map  basesocket_8hpp__incl.md5  basesocket_8hpp_source.html  buildenv_8hpp_source.html  (+2501 more)
.github/workflows/: build.yaml  sourcedoc.yml
.vscode.not/: c_cpp_properties.json  settings.json  spellright.dict
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+119 more)
src/: CODING_STYLE.md  DEVELOPER.md  MANUAL.md
src/cmake/: examples.cmake  findopenssl.cmake  unit-tests.cmake
src/doc/: Doxyfile.in
src/examples/cache/: cache.cpp
src/examples/cryptstr/: cryptstr.cpp
src/examples/docker/minideb/: Dockerfile  README.md  config.yaml  dodo-stack.yaml
src/examples/finger/: finger.cpp
src/examples/http-client/: http-client.cpp
src/examples/kv-store/: kv-store.cpp
src/examples/kvstore/: kvstore.cpp
src/examples/ping/: ping.cpp
src/examples/service/: service.cpp  service_tcpserver.hpp  tcpserver.hpp
src/examples/sqlite/: sqlite.cpp
src/examples/sysinfo/: sysinfo.cpp
src/examples/tls/artefacts/: .gitignore  config.yaml  configure.sh
src/examples/tls/artefacts/conf.d/toml/: README.md.toml  create-ca.toml  create-client.toml  create-intermediate.toml  create-server.toml  intermediate_ca_openssl.toml  library.sh.toml  reveal.toml  root_ca_openssl.toml  sign-client-csr.toml  sign-server-csr.toml
src/examples/tls/artefacts/templates/ca_config/: README.md.tpl  create-ca.sh.tpl  create-client.sh.tpl  create-intermediate.sh.tpl  create-server.sh.tpl  intermediate_ca_openssl.cnf.tpl  library.sh.tpl  reveal.sh.tpl  root_ca_openssl.cnf.tpl  sign-client-csr.sh.tpl  sign-server-csr.sh.tpl
src/examples/tls/tls-client/: tls-client.cpp
src/examples/tls/tls-server/: tls-server.cpp
src/examples/tls/x509-info/: x509-info.cpp
src/examples/webserver/: README.md
src/ext/crc32/: Crc32.cpp
src/include/: dodo.hpp
src/include/common/: application.hpp  buildenv.hpp.in  bytes.hpp  cache.hpp  common.hpp  config.hpp  datacrypt.hpp  exception.hpp  logger.hpp  octetarray.hpp  puts.hpp  systemerror.hpp  unittest.hpp  util.hpp
src/include/network/: address.hpp  basesocket.hpp  network.hpp  socket.hpp  socketparams.hpp  socketreadbuffer.hpp  sslcontext.hpp  sslsocket.hpp  tcplistener.hpp  tcpserver.hpp  tlscontext.hpp  tlssocket.hpp  uri.hpp  x509cert.hpp
src/include/network/doc/: DEVELOPER.md
src/include/network/protocol/: stomp.hpp
src/include/network/protocol/http/: http.hpp  httpfragment.hpp  httpmessage.hpp  httprequest.hpp  httpresponse.hpp  httpversion.hpp
src/include/network/protocol/stomp/: stomp.hpp
src/include/persist/: persist.hpp
src/include/persist/kvstore/: kvstore.hpp
src/include/persist/queuing/: fifoqueue.hpp
src/include/persist/sqlite/: sqlite.hpp
src/include/store/: kvstore.hpp  store.hpp
src/include/store/kvstore/: key.hpp  kvstore.hpp
src/include/store/kvstore/blockdefs/: common.hpp  data.hpp  header.hpp  index.hpp  indexleaf.hpp  indextree.hpp  toc.hpp
src/include/threads/: mutex.hpp  thread.hpp  threads.hpp
src/include/vscode/: ingoreIntelliSenseErrors.h
src/lib/common/: application.cpp  bytes.cpp  config.cpp  datacrypt.cpp  exception.cpp  logger.cpp  octetarray.cpp  unittest.cpp  util.cpp
src/lib/network/: address.cpp  basesocket.cpp  socket.cpp  socketreadbuffer.cpp  sslcontext.cpp  sslsocket.cpp  tcplistener.cpp  tcpserver.cpp  tlscontext.cpp  tlssocket.cpp  uri.cpp  x509cert.cpp
src/lib/network/protocol/: stomp.cpp
src/lib/network/protocol/http/: http.cpp  httpfragment.cpp  httpmessage.cpp  httprequest.cpp  httpresponse.cpp  httpversion.cpp
src/lib/network/protocol/stomp/: stomp.cpp
src/lib/persist/kvstore/: kvstore.cpp
src/lib/persist/sqlite/: sqlite.cpp
src/lib/store/: kvstore.cpp
src/lib/store/kvstore/: key.cpp  kvstore.cpp
src/lib/store/kvstore/blockdefs/: common.cpp  data.cpp  header.cpp  index.cpp  indexleaf.cpp  indextree.cpp  toc.cpp
src/lib/threads/: mutex.cpp  thread.cpp
tests/common/: test-common-bytes.cpp  test-common-datacrypt.cpp  test-common-exception.cpp  test-common-octetarray.cpp  test-common-puts.cpp  test-common-systemerror.cpp
tests/network/: ca-chain.cert.pem  localhost.cert.pem  localhost.csr.pem  localhost.key.pem  localhost.passphrase  localhost.pkcs12  test-network-address.cpp  test-network-protocol-http.cpp  test-network-protocol-stomp.cpp  test-network-socket.cpp  test-network-tls.sh  test-network-tlscontext.cpp  test-network-tlscontext.yaml  test-network-uri.cpp  test-network-x509.cpp
tests/network/http/: get-body-chunked.http  get-body.http  response-body.http
